add qr code sheets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>AdvantEdge Sign-Up Forms</title>
     
-    <link rel="stylesheet" href="https://use.typekit.net/ryp8bab.css?ch=PEYHG">
+    <link rel="stylesheet" href="https://use.typekit.net/ryp8bab.css?ch=ykaY7">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/barcodes/JsBarcode.ean-upc.min.js"></script>
 
@@ -17,6 +17,9 @@
             <p><em>One card # per line</em></p>
             <textarea></textarea>
             <button onclick="generate()">Generate</button>
+            <button onclick="window.print()">Click here to print</button> <span>(Print in landscape)</span>
+                        
+            <a href="signupqr.html" style="text-align: right;float: right;">Click here to see print-outs of QR codes for the mobile app</a>
         </fieldset>
     </header>
 
